--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "raspberry pi"
   ],
   "license": "Apache-2.0",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": {
     "name": "MCQN Ltd",
     "email": "adrianm@mcqn.com",
@@ -19,11 +19,10 @@
   },
   "main": "./lib/rfid-sl030.js",
   "dependencies": {
-    "ffi": "~1.2.7",
-    "ref": "~0.3.2",
+    "ffi": ">=1.2.7",
+    "ref": ">=0.3.2",
     "sleep": ">=1.1.8",
-    "ref-struct": "~0.0.6",
-    "exec-sync": "~0.1.6"
+    "ref-struct": ">=0.0.6"
   },
   "bugs": {
     "url": "https://github.com/mcqn/rfid-sl030/issues"
